--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <h1>Random Shape Generator</h1>
-      <ul>
+      <ul id="silly-shapes-list">
         <!-- You will replace the following lis, with shapes generated in your arrayOfShapes file -->
         <li>I am a red triangle with 3 sides!</li>
         <li>I am a blue square with 2 sides!</li>
