Change 'lis' to 'lists'

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <h1>Random Shape Generator</h1>
       <ul id="silly-shapes-list">
-        <!-- You will replace the following lis, with shapes generated in your arrayOfShapes file -->
+        <!-- You will replace the following lists, with shapes generated in your arrayOfShapes file -->
         <li>I am a red triangle with 3 sides!</li>
         <li>I am a blue square with 2 sides!</li>
         <li>I am a orange polygon with 4 sides!</li>
